--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@ font-size: 20px;
   <div class="mainload">
     <div class="header">
       <img id="logo" class ="logo"src="images/logo1.jpeg" alt="logo">
-      <a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\login.html" class="buttonb">Login</a>
-      <a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\signup.html" class="buttonb">Signup</a>
+      <a href="login.html" class="buttonb">Login</a>
+      <a href="signup.html" class="buttonb">Signup</a>
       <h1 align="center">Blockrealty</h1>
     <h4 align="center">"21st century real estate website in India"</h4>
   </div>
   </div>
 
   <ul>
-    <li><a class="active" href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\home.html">Home</a></li>
-    <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\News.html">News</a></li>
-    <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\Contact.html">Contact</a></li>
-    <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\About.html">About</a></li>
+    <li><a class="active" href="home.html">Home</a></li>
+    <li><a href="News.html">News</a></li>
+    <li><a href="Contact.html">Contact</a></li>
+    <li><a href="About.html">About</a></li>
   </ul>
   <br>
   <div class="slideshow-container">
@@ -71,7 +71,7 @@ font-size: 20px;
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
       <img src="images/prop2.jpeg" style="width:100%">
-    <a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\prop1.html">
+    <a href="prop1.html">
        <button class="btn">Buy with crypto</button></a>
     <div class="text">
 6🛏  5🛁  prime property</div>
@@ -80,7 +80,7 @@ font-size: 20px;
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
 
-  <a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\login.html">
+  <a href="login.html">
     <img src="images/prop1.jpg" style="width:100%">
     <div class="text" align="center">prime property 2</div>
   </div>
