--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ font-size: 20px;
   </div>
 
   <ul>
-    <li><a class="active" href="home.html">Home</a></li>
+    <li><a class="active" href="index.html">Home</a></li>
     <li><a href="News.html">News</a></li>
     <li><a href="Contact.html">Contact</a></li>
     <li><a href="About.html">About</a></li>
