--- a/News.html
+++ b/News.html
@@ -6,15 +6,15 @@
     <meta charset= "utf-8">
     <meta name="viewport"content="width=device-width,intial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <ul>
-      <li><a class="active" href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\home.html">Home</a></li>
-      <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\News.html">News</a></li>
-      <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\Contact.html">Contact</a></li>
-      <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\About.html">About</a></li>
+      <li><a class="active" href="home.html">Home</a></li>
+      <li><a href="News.html">News</a></li>
+      <li><a href="Contact.html">Contact</a></li>
+      <li><a href="About.html">About</a></li>
     </ul>
     <div class="blog-section">
         <div class = "section-content">
