--- a/About.html
+++ b/About.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/styleabout.css">
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="/css/styleabout.css">
+<link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <ul>
-    <li><a class="active" href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\home.html">Home</a></li>
-    <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\News.html">News</a></li>
-    <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\Contact.html">Contact</a></li>
-    <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\About.html">About</a></li>
+    <li><a class="active" href="home.html">Home</a></li>
+    <li><a href="News.html">News</a></li>
+    <li><a href="Contact.html">Contact</a></li>
+    <li><a href="About.html">About</a></li>
   </ul>
 
 <div class="about-section">
