--- a/prop1.html
+++ b/prop1.html
@@ -2,19 +2,19 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="css/slide.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/styleprop.css">
+  <link rel="stylesheet" href="/css/slide.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/styleprop.css">
   <meta charset="utf-8">
   <title>property</title>
 </head>
 
 <body>
   <ul>
-    <li><a class="active" href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\home.html">Home</a></li>
-    <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\News.html">News</a></li>
-    <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\Contact.html">Contact</a></li>
-    <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\About.html">About</a></li>
+    <li><a class="active" href="home.html">Home</a></li>
+    <li><a href="News.html">News</a></li>
+    <li><a href="Contact.html">Contact</a></li>
+    <li><a href="About.html">About</a></li>
   </ul>
   <br>
   <hr>
