--- a/Contact.html
+++ b/Contact.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Contact</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="css/style1.css">
+  <link rel="stylesheet" href="/css/style1.css">
   </head>
   <body>
     <ul>
-      <li><a class="active" href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\home.html">Home</a></li>
-      <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\News.html">News</a></li>
-      <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\Contact.html">Contact</a></li>
-      <li><a href="C:\Users\FOUZAN-PC\Documents\Projects on my websites\Blockrealty.in\About.html">About</a></li>
+      <li><a class="active" href="home.html">Home</a></li>
+      <li><a href="News.html">News</a></li>
+      <li><a href="Contact.html">Contact</a></li>
+      <li><a href="About.html">About</a></li>
     </ul>
     <section class="ftco-section img bg-hero" style="background-image: url(images/bg_1.jpg);">
   		<div class="container">
