--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ font-size: 20px;
   <meta charset="utf-8">
   <title>Blockrealty</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/css/styles.css/">
-<link rel="stylesheet" href="/css/social.css/">
-<link rel="stylesheet" href="/css/slide.css/">
+<link rel="stylesheet" href="/css/styles.css"/>
+<link rel="stylesheet" href="/css/social.css"/>
+<link rel="stylesheet" href="/css/slide.css"/>
 </head>
 
 <body>
