--- a/About.html
+++ b/About.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/styleabout.css">
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="/css/styleabout.css">
+<link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <ul>
