--- a/Contact.html
+++ b/Contact.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Contact</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="css/style1.css">
+  <link rel="stylesheet" href="/css/style1.css">
   </head>
   <body>
     <ul>
