--- a/News.html
+++ b/News.html
@@ -6,8 +6,8 @@
     <meta charset= "utf-8">
     <meta name="viewport"content="width=device-width,intial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <ul>
