--- a/prop1.html
+++ b/prop1.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="css/slide.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/styleprop.css">
+  <link rel="stylesheet" href="/css/slide.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/styleprop.css">
   <meta charset="utf-8">
   <title>property</title>
 </head>
